Set new-task window height to a fixed amount and blurred the background on opening

--- a/styles.css
+++ b/styles.css
@@ -188,3 +188,48 @@ li:hover .delete{
     opacity: 1;
     transform: translateX(0);
 }
+
+@keyframes blur {
+    from {
+        filter: blur(0px);
+        -webkit-filter: blur(0px);
+        -moz-filter: blur(0px);
+        -o-filter: blur(0px);
+        -ms-filter: blur(0px);
+    }
+    to {
+        filter: blur(5px);
+        -webkit-filter: blur(5px);
+        -moz-filter: blur(5px);
+        -o-filter: blur(5px);
+        -ms-filter: blur(5px);
+    }
+}
+
+.blur {
+    animation-name: blur;
+    animation-duration: 0.5s;
+    animation-fill-mode: forwards;
+}
+
+@keyframes unblur {
+    from {
+        filter: blur(5px);
+        -webkit-filter: blur(5px);
+        -moz-filter: blur(5px);
+        -o-filter: blur(5px);
+        -ms-filter: blur(5px);
+    }
+    to {
+        filter: blur(0px);
+        -webkit-filter: blur(0px);
+        -moz-filter: blur(0px);
+        -o-filter: blur(0px);
+        -ms-filter: blur(0px);
+    }
+}
+.unblur {
+    animation-name: unblur;
+    animation-duration: 0.5s;
+    animation-fill-mode: reverse;
+}
